--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,14 @@ before_install:
   - sudo make -C tools install
   - export PACKAGING_SECRET_KEY="$(openssl aes-256-cbc -K $encrypted_a39e3f1ee8ba_key -iv $encrypted_a39e3f1ee8ba_iv -in signing_key.asc.enc -d | base64)"
 install: true
-script: build_new_release && build_new_nightly
+script: |
+  if [ ${TRAVIS_EVENT_TYPE} == 'push' ] || [ ${TRAVIS_EVENT_TYPE} == 'pull_request' ] || [ ${TRAVIS_EVENT_TYPE} == 'api' ]; then
+  echo "Travis Event Type is ${TRAVIS_EVENT_TYPE}"
+  build_new_release
+  elif [ ${TRAVIS_EVENT_TYPE} == 'cron' ]; then
+  echo "Travis Event Type is ${TRAVIS_EVENT_TYPE}"
+  build_new_nightly
+  fi
 deploy:
   - provider: packagecloud
     username: "citusdata"
