--- a/.travis.yml
+++ b/.travis.yml
@@ -55,6 +55,8 @@ install: true
 script: |
         if [ -z "${UNENCRYPTED_PACKAGE:-}" ] && [ ${TRAVIS_EVENT_TYPE} != 'cron' ] ; then
           citus_package -p ${TARGET_PLATFORM} 'local' 'release'
+        elif [ -z "${UNENCRYPTED_PACKAGE:-}" ] && [ ${TRAVIS_EVENT_TYPE} == 'cron' ] ; then
+          citus_package -p ${TARGET_PLATFORM} 'local' 'nightly'
         else
           if [ ${TRAVIS_EVENT_TYPE} == 'push' ] || [ ${TRAVIS_EVENT_TYPE} == 'pull_request' ] || [ ${TRAVIS_EVENT_TYPE} == 'api' ]; then
             echo "Travis Event Type is ${TRAVIS_EVENT_TYPE}"
