Use security flags supplied by the configure scripts

--- a/debian/rules
+++ b/debian/rules
@@ -16,9 +16,7 @@ override_dh_auto_test:
 
 override_dh_auto_configure:
 	debian/check-gcc-version.sh
-	# Flags taken from: https://liquid.microsoft.com/Web/Object/Read/ms.security/Requirements/Microsoft.Security.SystemsADM.10203#guide
-	+CFLAGS='$(CFLAGS) -fstack-protector-strong -D_FORTIFY_SOURCE=2 -O2 -z noexecstack -fpic -Wl,-z,relro -Wl,-z,now -Wformat -Wformat-security -Werror=format-security' \
-		pg_buildext configure build-%v "--with-extra-version='$${CONF_EXTRA_VERSION:-}' --without-libcurl"
+	+pg_buildext configure build-%v "--with-extra-version='$${CONF_EXTRA_VERSION:-}' --without-libcurl --with-security-flags"
 
 override_dh_auto_install:
 	+pg_buildext install build-%v postgresql-%v-citus-enterprise
