--- a/.travis.yml
+++ b/.travis.yml
@@ -34,16 +34,5 @@ deploy:
     skip_cleanup: true
     local-dir: "pkgs/releases"
     on:
-      branch: "debian-citus"
+      branch: "debian-citus-8.3"
       condition: -d "pkgs/releases"
-  - provider: packagecloud
-    username: "citusdata"
-    repository: "$PKG_REPOTYPE-nightlies"
-    token: $PACKAGECLOUD_API_TOKEN
-    dist: $TARGET_PLATFORM
-    skip_cleanup: true
-    local-dir: "pkgs/nightlies"
-    on:
-      branch: "debian-citus"
-      condition: -d "pkgs/nightlies"
-after_deploy: trigger_docker_nightly
