--- a/.github/workflows/update_package_properties.yml
+++ b/.github/workflows/update_package_properties.yml
@@ -4,14 +4,12 @@ name: CI
 
 # Controls when the action will run.
 on:
-  # Triggers the workflow on push or pull request events but only for the develop branch
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -21,10 +19,14 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
       - name: Clone Tools branch
         run: git clone --branch tools-transition https://github.com/citusdata/tools.git
 
-      # Runs a set of commands using the runners shell
+      - name: install requirements
+        run: python -m pip install -r tools/python/requirements.txt
+
       - name: Execute Package Properties Update
-        run: chmod +x ./tools/bash/update_package_properties.sh && ./tools/bash/update_package_properties.sh
+        run: |
+              git config --global user.email "gindibay@microsoft.com"
+              git config --global user.name "Gurkan Indibay"
+              chmod +x ./tools/bash/update_package_properties.sh && ./tools/bash/update_package_properties.sh
