--- a/.github/workflows/update_package_properties.yml
+++ b/.github/workflows/update_package_properties.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Update Package Properties
 
 env:
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
