--- a/.github/workflows/update_package_properties.yml
+++ b/.github/workflows/update_package_properties.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Install Python requirements
         run: python -m pip install -r tools/python/requirements.txt
 
-      - name: Execute Package Properties Update
+      - name: Update Package Properties
         run: |
           git config --global user.email "${MICROSOFT_EMAIL}"
           git config --global user.name "${NAME}"
