--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -39,8 +39,8 @@ jobs:
         run: python -m pip install -r tools/packaging_automation/requirements.txt
 
       - name: Build Packages
-        run: python -m  tools.packaging_automation.citus_package --gh_token ${{ secrets.GH_TOKEN }} --platform ${{ matrix.platform }} \
-          --build_type 'release' --secret_key ${{ secrets.PACKAGING_SECRET_KEY }} --passphrase ${{ secrets.PACKAGING_PASSPHRASE }} \
+        run: python -m  tools.packaging_automation.citus_package --gh_token "${{ secrets.GH_TOKEN }}" --platform "${{ matrix.platform }}" \
+          --build_type 'release' --secret_key "${{ secrets.PACKAGING_SECRET_KEY }}" --passphrase "${{ secrets.PACKAGING_PASSPHRASE }}" \
           --output_dir "$(pwd)/packages/" --input_files_dir "$(pwd)" --output_validation "True"
 
 
