--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -23,11 +23,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-#      - name: install dependencies
-#        run: sudo apt install libcurl4-openssl-dev libssl-dev
-#
-#      - name: Define git credentails
-#        run: git config --global user.email "gindibay@microsoft.com"&& git config --global user.name "Gurkan Indibay"
+      #      - name: install dependencies
+      #        run: sudo apt install libcurl4-openssl-dev libssl-dev
+      #
+      #      - name: Define git credentails
+      #        run: git config --global user.email "gindibay@microsoft.com"&& git config --global user.name "Gurkan Indibay"
 
       - name: Clone  tools
         run: git clone https://github.com/citusdata/tools.git --branch tools-transition-update-docker --single-branch tools
@@ -39,7 +39,8 @@ jobs:
         run: python -m pip install -r tools/packaging_automation/requirements.txt
 
       - name: Build Packages
-        run: python -m  tools.packaging_automation.citus_package --gh_token "${{ secrets.GH_TOKEN }}" --platform "${{ matrix.platform }}" \
+        run: |
+          python -m  tools.packaging_automation.citus_package --gh_token "${{ secrets.GH_TOKEN }}" --platform "${{ matrix.platform }}" \
           --build_type 'release' --secret_key "${{ secrets.PACKAGING_SECRET_KEY }}" --passphrase "${{ secrets.PACKAGING_PASSPHRASE }}" \
           --output_dir "$(pwd)/packages/" --input_files_dir "$(pwd)" --output_validation "True"
 
