--- a/packaging_ignore.yml
+++ b/packaging_ignore.yml
@@ -7,6 +7,7 @@ base:
   - "configure: WARNING: unrecognized options: --disable-dependency-tracking"
   - "WARNING: If you run into issues during linking or bitcode compilation, you can use --without-security-flags."
   - "gpg: WARNING: options in `/root/.gnupg/gpg.conf' are not yet active during this run"
+  - "^/.* warning: overriding recipe for target 'check'"
 debian:
   - ".*: W: invalid-license Commercial"
   - ".*: W: no-documentation"
