--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -45,4 +45,7 @@ jobs:
           --build_type 'release' --secret_key "${{ secrets.PACKAGING_SECRET_KEY }}" --passphrase "${{ secrets.PACKAGING_PASSPHRASE }}" \
           --output_dir "$(pwd)/packages/" --input_files_dir "$(pwd)" --output_validation "False"
 
-
+      - name: Publish Packages
+        run: |
+          python -m  tools.packaging_automation.upload_to_package_cloud --platform "el/8" --package_cloud_api_token ${{ secrets.PACKAGE_CLOUD_API_TOKEN }} \
+          --repository_name "sample" --output_file_path "$(pwd)/packages"
