--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -23,20 +23,21 @@ jobs:
       PLATFORM: ${{ matrix.platform }}
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
       #      - name: install dependencies
       #        run: sudo apt install libcurl4-openssl-dev libssl-dev
       #
       #      - name: Define git credentails
       #        run: git config --global user.email "gindibay@microsoft.com"&& git config --global user.name "Gurkan Indibay"
 
-      - name: Clone  tools
-        run: git clone https://github.com/citusdata/tools.git --branch tools-transition-update-docker --single-branch tools
+      - name: Clone tools branch
+        run: git clone --depth=1 --branch tools-transition-update-docker https://github.com/citusdata/tools.git tools
 
-      - name: install dependencies
+      - name: Install package dependencies
         run: sudo apt install libcurl4-openssl-dev libssl-dev
 
-      - name: install requirements
+      - name: Install python requirements
         run: python -m pip install -r tools/packaging_automation/requirements.txt
 
       - name: Build Packages
