--- a/packaging_ignore.yml
+++ b/packaging_ignore.yml
@@ -8,9 +8,12 @@ base:
   - "WARNING: If you run into issues during linking or bitcode compilation, you can use --without-security-flags."
   - "gpg: WARNING: options in `/root/.gnupg/gpg.conf' are not yet active during this run"
   - ".* warning: overriding recipe for target 'check'"
+  - "# create a temporary directory for gpg to use so it doesn't output warnings"
+  - "configure: WARNING: If you run into issues during linking or bitcode compilation, you can use --without-security-flags."
 debian:
   - ".*: W: invalid-license Commercial"
   - ".*: W: no-documentation"
 rpm:
   - ".*: W: invalid-license Commercial"
   - ".*: W: no-documentation"
+  - ".*: W: no-manual-page-for-binary citus-enterprise-pg-.*-setup"
