--- a/packaging_ignore.yml
+++ b/packaging_ignore.yml
@@ -8,7 +8,7 @@ base:
   - "WARNING: If you run into issues during linking or bitcode compilation, you can use --without-security-flags."
   - "gpg: WARNING: options in `/root/.gnupg/gpg.conf' are not yet active during this run"
   - ".* warning: overriding recipe for target 'check'"
-  - ".*: E: zero-length /usr/pgsql-11/share/extension/.*"
+  - ".*: E: zero-length /usr/pgsql-.*/share/extension/.*"
 debian:
   - ".*: W: invalid-license Commercial"
   - ".*: W: no-documentation"
