--- a/.github/workflows/build-citus-community-nightlies.yml
+++ b/.github/workflows/build-citus-community-nightlies.yml
@@ -4,6 +4,8 @@ env:
   MAIN_BRANCH: "all-citus"
   PACKAGE_CLOUD_REPO_NAME: "citusdata/community-nightlies"
   PACKAGE_CLOUD_API_TOKEN: ${{ secrets.PACKAGE_CLOUD_API_TOKEN }}
+  PACKAGING_PASSPHRASE: ${{ secrets.PACKAGING_PASSPHRASE }}
+  PACKAGING_SECRET_KEY: ${{ secrets.PACKAGING_SECRET_KEY }}
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
   CURRENT_BRANCH: "${GITHUB_REF##*/}"
 on:
