--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -45,6 +45,10 @@ jobs:
       - name: Install package dependencies
         run: sudo apt-get update && sudo apt install libcurl4-openssl-dev libssl-dev
 
+      - name: Install wheel for el/8
+        if: matrix.TARGET_PLATFORM  == "centos,8"
+        run: python -m pip install wheel
+
       - name: Update and check dockerfiles
         run: |
           ./update_dockerfiles
@@ -57,7 +61,7 @@ jobs:
           ./update_images
 
       - name: Clone tools repo for test
-        run: git clone -b develop_tests --depth=1  https://github.com/citusdata/tools.git tools
+        run: git clone -b v0.8.2 --depth=1  https://github.com/citusdata/tools.git tools
 
       - name: Execute packaging tests
         run: |
