--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -43,7 +43,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install package dependencies
-        run: sudo apt-get update && sudo apt install libcurl4-openssl-dev libssl-dev
+        run: sudo apt-get update && sudo apt-get install libcurl4-openssl-dev libssl-dev python3-testresources
 
       - name: Install wheel for el/8
         if: matrix.TARGET_PLATFORM  == 'centos,8'
