--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -5,6 +5,8 @@ env:
   PACKAGE_CLOUD_REPO_NAME: "citusdata/enterprise"
   PACKAGE_CLOUD_API_TOKEN: ${{ secrets.PACKAGE_CLOUD_API_TOKEN }}
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
+  PACKAGING_SECRET_KEY: ${{ secrets.PACKAGING_SECRET_KEY }}
+  PACKAGE_ENCRYPTION_KEY: ${{ secrets.PACKAGE_ENCRYPTION_KEY }}
   PACKAGING_PASSPHRASE: ${{ secrets.PACKAGING_PASSPHRASE }}
   UNENCRYPTED_PACKAGE: true
 on:
