--- a/packaging_ignore.yml
+++ b/packaging_ignore.yml
@@ -17,3 +17,4 @@ rpm:
   - ".*: W: invalid-license Commercial"
   - ".*: W: no-documentation"
   - ".*: W: no-manual-page-for-binary citus-enterprise-pg-.*-setup"
+  - ".*: W: unstripped-binary-or-object /usr/pgsql-.*/lib/citus.so"
