--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -3,11 +3,11 @@ name: Build Package
 env:
   MAIN_BRANCH: "all-pgautofailover-enterprise"
   PACKAGE_CLOUD_REPO_NAME: "citusdata/enterprise"
-  PACKAGE_ENCRYPTION_KEY: ${{ secrets.PACKAGE_ENCRYPTION_KEY }}
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
   PACKAGE_CLOUD_API_TOKEN: ${{ secrets.PACKAGE_CLOUD_API_TOKEN }}
   PACKAGING_SECRET_KEY: ${{ secrets.PACKAGING_SECRET_KEY }}
   PACKAGING_PASSPHRASE: ${{ secrets.PACKAGING_PASSPHRASE }}
+  UNENCRYPTED_PACKAGE: true
 on:
   push:
     branches:
