--- a/packaging_ignore.yml
+++ b/packaging_ignore.yml
@@ -8,6 +8,7 @@ base:
   - "WARNING: If you run into issues during linking or bitcode compilation, you can use --without-security-flags."
   - "gpg: WARNING: options in `/root/.gnupg/gpg.conf' are not yet active during this run"
   - ".* warning: overriding recipe for target 'check'"
+  - "dpkg-genchanges: warning: the current version .* is earlier than the previous one .*"
 debian:
   - ".*: W: invalid-license Commercial"
   - ".*: W: no-documentation"
