--- a/.github/workflows/update_package_properties.yml
+++ b/.github/workflows/update_package_properties.yml
@@ -17,6 +17,9 @@ on:
       name:
         description: "Name to be written on changelogs"
         default: "Gurkan Indibay"
+      changelog_entry:
+        description: "If filled, changelog other than default entry will be written"
+        default: ""
 jobs:
   update_package_properties:
     name: Update package properties
@@ -30,7 +33,7 @@ jobs:
         run: sudo apt install libcurl4-openssl-dev libssl-dev
 
       - name: Clone tools branch
-        run: git clone -b v0.8.1 --depth=1  https://github.com/citusdata/tools.git tools
+        run: git clone -b update_properties_fixes --depth=1  https://github.com/citusdata/tools.git tools
 
       - name: Set git name and email
         run: |
@@ -49,4 +52,6 @@ jobs:
           --email ${{ github.event.inputs.microsoft_email }} \
           --name "${{ github.event.inputs.name }}" \
           --pipeline \
+          --fancy_ver_no "${{ github.event.inputs.fancy_version_no }}" \
+          --changelog_entry "${{ github.event.inputs.changelog_entry }}" \
           --exec_path "$(pwd)"
