--- a/.github/workflows/update-pgxn-version.yml
+++ b/.github/workflows/update-pgxn-version.yml
@@ -26,6 +26,11 @@ jobs:
       - name: Install Python requirements
         run: python -m pip install -r tools/packaging_automation/requirements.txt
 
+      - name: Set git name and email
+        run: |
+          git config --global user.email "${{ github.event.inputs.microsoft_email }}" && \
+          git config --global user.name "${{ github.event.inputs.name }}"
+
       - name: Update pgxn files
         run: |
           python -m tools.packaging_automation.update_pgxn \
