--- a/.github/workflows/build-pgaf-community-nightlies.yml
+++ b/.github/workflows/build-pgaf-community-nightlies.yml
@@ -1,7 +1,7 @@
 name: Buildand publish citus nightly package
 
 env:
-  MAIN_BRANCH: "all-citus"
+  MAIN_BRANCH: "all-pgautofailover"
   PACKAGE_CLOUD_REPO_NAME: "citusdata/community-nightlies"
   PACKAGE_CLOUD_API_TOKEN: ${{ secrets.PACKAGE_CLOUD_API_TOKEN }}
   PACKAGING_PASSPHRASE: ${{ secrets.PACKAGING_PASSPHRASE }}
