--- a/.github/workflows/build-pgaf-enterprise-nightlies.yml
+++ b/.github/workflows/build-pgaf-enterprise-nightlies.yml
@@ -1,8 +1,8 @@
 name: Buildand publish citus nightly package
 
 env:
-  MAIN_BRANCH: "all-citus"
-  PACKAGE_CLOUD_REPO_NAME: "citusdata/community-nightlies"
+  MAIN_BRANCH: "all-pgautofailover-enterprise"
+  PACKAGE_CLOUD_REPO_NAME: "citusdata/enterprise-nightlies"
   PACKAGE_CLOUD_API_TOKEN: ${{ secrets.PACKAGE_CLOUD_API_TOKEN }}
   PACKAGING_PASSPHRASE: ${{ secrets.PACKAGING_PASSPHRASE }}
   PACKAGING_SECRET_KEY: ${{ secrets.PACKAGING_SECRET_KEY }}
