--- a/.github/workflows/build-citus-enterprise-nightlies.yml
+++ b/.github/workflows/build-citus-enterprise-nightlies.yml
@@ -1,7 +1,7 @@
 name: Build and publish citus entertprise nightly packages
 
 env:
-  MAIN_BRANCH: "all-citus-enterprise"
+  MAIN_BRANCH: "all-enterprise"
   PACKAGE_CLOUD_REPO_NAME: "citusdata/enterprise-nightlies"
   PACKAGE_CLOUD_API_TOKEN: ${{ secrets.PACKAGE_CLOUD_API_TOKEN }}
   PACKAGING_PASSPHRASE: ${{ secrets.PACKAGING_PASSPHRASE }}
@@ -35,8 +35,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
 
       # This step is to fetch the images unanonymously to have higher bandwidth
       - name: DockerHub Login
