--- a/.github/workflows/build-citus-community-nightlies.yml
+++ b/.github/workflows/build-citus-community-nightlies.yml
@@ -38,8 +38,11 @@ jobs:
         uses: actions/checkout@v2
 
       # This step is to fetch the images unanonymously to have higher bandwidth
-      - name: DockerHub Login
-        run: docker login -u "${DOCKERHUB_USER_NAME}" -p "${DOCKERHUB_PASSWORD}"
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: "${DOCKERHUB_USER_NAME}"
+          password: "${DOCKERHUB_PASSWORD}"
 
       - name: Clone tools branch
         run: git clone -b v0.8.2 --depth=1  https://github.com/citusdata/tools.git tools
