--- a/.github/workflows/build-citus-enterprise-nightlies.yml
+++ b/.github/workflows/build-citus-enterprise-nightlies.yml
@@ -42,8 +42,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: "${DOCKERHUB_USER_NAME}"
-          password: "${DOCKERHUB_PASSWORD}"
+          username: ${DOCKERHUB_USER_NAME}
+          password: ${DOCKERHUB_PASSWORD}
 
       - name: Clone tools branch
         run: git clone -b v0.8.2 --depth=1  https://github.com/citusdata/tools.git tools
