--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -7,8 +7,6 @@ env:
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
   PACKAGING_SECRET_KEY: ${{ secrets.PACKAGING_SECRET_KEY }}
   PACKAGING_PASSPHRASE: ${{ secrets.PACKAGING_PASSPHRASE }}
-  DOCKERHUB_USER_NAME: ${{ secrets.DOCKERHUB_USER_NAME }}
-  DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
 on:
   push:
     branches:
@@ -46,8 +44,11 @@ jobs:
         run: python -m pip install -r tools/packaging_automation/requirements.txt
 
       # This step is to fetch the images unanonymously to have higher bandwidth
-      - name: DockerHub Login
-        run: docker login -u "${DOCKERHUB_USER_NAME}" -p "${DOCKERHUB_PASSWORD}"
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USER_NAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Build packages
         run: |
